[tool.poetry]
name = "rex"
version = "0.1.0"
description = "Avoid extinction-level events with your DaVinci Resolve projects"
authors = ["Caleb Trevatt <in03@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
rich = "^12.0.0"
pyfiglet = "^0.8.post1"
typer = {extras = ["all"], version = "^0.6.1"}
deepdiff = "^5.7.0"
"ruamel.yaml" = "^0.17.21"
schema = "^0.7.5"
notify-py = {git = "https://github.com/in03/notify-py"}
pydavinci = {git = "https://github.com/in03/pydavinci"}
yaspin = "^2.2.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.3.6"
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rex = "rex.app.cli:main"